# Quainy-Vouch

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: analytics.py  briefs.py  contracts.py  drafts.py  format_adapters.py  intelligence.py  main.py  opportunities.py  postgres_store.py  preference_learning.py  prompt_registry.py  providers.py  publishing.py  risk_checks.py  sample_data.py  schemas.py  source_connectors.py  store.py  trends.py
backend/migrations/: env.py
backend/tests/: test_ai_provider_settings.py  test_architecture_contracts.py  test_auth_onboarding.py  test_background_jobs.py  test_brief_builder_and_linkedin_adapter.py  test_evaluation_harness.py  test_ingestion_retrieval.py  test_model_provider_layer.py  test_mvp_flow.py  test_opportunity_generation.py  test_organization_profile.py  test_preference_learning.py  test_provider_registry.py  test_source_library.py  test_trend_calendar.py  test_users_roles.py
docs/: backup_restore.md  quickstart.md  security.md
docs/architecture/: api_schema.yaml  database_schema.sql  module_interfaces.md  system_overview.md
docs/evaluation/: golden_cases.json  mvp_bug_list.md  quainy_dogfood_log.md  regression_reports.md
docs/integrations/: linkedin_api_research.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  formTypes.ts  (+4 more)
scripts/: create_quainy_test_workspace.py  run_eval.py  validate_live_postgres.py  validate_ollama_workflow.py  validate_realistic_org_workflow.py
(+73 files in other folders)
