[project]
name = "quainy-vouch"
version = "0.1.0"
description = "Source-grounded content intelligence for human-approved company communication."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "psycopg[binary]>=3.1.0",
  "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]
providers = [
  "openai>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
